--- a/index.html
+++ b/index.html
@@ -64,13 +64,114 @@
       Double vision in one eye is known as monocular and is least common of the two.
        This type is usually caused by an eye problem, such as:
        <br>
-       <ul>
-      <li>Astigmatism</li>
-      <li>Dry eye syndrome</li>
-      <li>Cataracts</li>
-      <li>Macular degeneration</li>
-      <li>Temporary double vision</li>
-      </ul>
+     </p>
+       <button class="myBtn_multi">Astigmatism</button>
+       <!-- The Modal -->
+        <div class="modal modal_multi">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close close_multi">&times;</span>
+          <div class="col-1">
+            <img class="item-img"src="img/item1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <h2>Astigmatism</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+      </div>
+
+       <button class="myBtn_multi">Dry Eye Syndrome</button>
+       <!-- The Modal -->
+        <div class="modal modal_multi">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close close_multi">&times;</span>
+          <div class="col-1">
+            <img class="item-img"src="img/item1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <h2>Dry Eye Syndrome </h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+      </div>
+       <button class="myBtn_multi">Cataracts</button>
+       <!-- The Modal -->
+        <div class="modal modal_multi">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close close_multi">&times;</span>
+          <div class="col-1">
+            <img class="item-img"src="img/item1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <h2>Cartaracts</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+      </div>
+       <button class="myBtn_multi">Macular degeneration</button>
+       <!-- The Modal -->
+        <div class="modal modal_multi">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close close_multi">&times;</span>
+          <div class="col-1">
+            <img class="item-img"src="img/item1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <h2>Macular Dengeneration</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+      </div>
+       <button class="myBtn_multi">Temporary double vision</button>
+       <!-- The Modal -->
+        <div class="modal modal_multi">
+        <!-- Modal content -->
+        <div class="modal-content">
+          <span class="close close_multi">&times;</span>
+          <div class="col-1">
+            <img class="item-img"src="img/item1.jpg" alt="">
+          </div>
+          <div class="col-2">
+            <h2>Temporary Double Vision</h2>
+
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint occaecat cupidatat non proident,
+               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          </div>
+
+        </div>
+      </div>
+
       Episodes of temporary diplopia happen for many reasons, like if you’ve been drinking too much alcohol,
       or if you’re over-tired. Short-term double vision is usually nothing to worry about,
       but if you experience double vision for longer than 48 hours we’d recommend getting your eyes checked by your optician or GP.
@@ -98,7 +199,6 @@
       <div class="test">
         <img class="cont-img2" src="img/cat.png" alt="">
         <img class="cont-img2" src="img/cat.png" alt="">
-        <img class="cont-img2" src="img/cat.png" alt="">
 
         <p> <h2>Test with the two cats:</h2> If you are looking to a pen in front of the paper, you'll see a  third cat standing behind the pen.
           That third cat has everything on it and remember: two ears, two whiskers and a tail.
@@ -109,9 +209,13 @@
     <!-- end -->
 
     <!-- content5 -->
+    <div class"content5">
+    <div class="content-ops">
     <div class="Content-button">
-      <button type="button" name="button">FIND AN OPTICIAN</button>
+      <button class="ops-button" name="button">FIND AN OPTICIAN</button>
     </div>
+  </div>
+</div>
 
     <!-- content4 -->
 <div class="Content1">
@@ -123,12 +227,8 @@
       <img src="img/double.jpg" >
     </div>
       <h3>Use the slider to find out what doucble vision looks like.</h3>
-  </div>
+
 </div>
-
-
-    <!-- end -->
-
     <!-- end -->
 
     <div class="footer">
