--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- content1 -->
     <div class="banner">
-      <img class="mainPic" src="img/DoubleVision.jpg" alt="">
+      <img class="mainPic" src="img/banner.png" alt="">
     </div>
 
     <div class="Content">
@@ -77,11 +77,22 @@
           <div class="col-2">
             <h2>Astigmatism</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>In order to see perfectly clearly, any object we look at needs to be uniformly in focus at the back of the eye.
+               Astigmatism occurs when part of the image is always out of focus, causing blurred vision.</p>
+
+            <p><h2>What are the symptoms of astigmatism?</h2>
+              Most glasses wearers will have some form of astigmatism.In more developed cases, or without treatment, symptoms could also include:</p>
+
+              <p><h2> What help is available?</h2>
+                In most cases, astigmatism is easily corrected with either glasses, specialised contact lenses (called toric lenses), or even surgery.
+                Your optician will be able to detect astigmatism during a routine eye test, and they’ll recommend the best option for you.</p>
+
+              <ul>
+              <li>Headaches</li>
+              <li>Having to squint to see clearly</li>
+              <li>Eye strain or tiredness when focusing on prolonged tasks - like when you’re reading a book or a computer screen</li>
+              </ul>
+
           </div>
 
         </div>
@@ -99,11 +110,33 @@
           <div class="col-2">
             <h2>Dry Eye Syndrome </h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Although anyone can be affected,
+              it’s estimated that up to one in every three people over the age of 65 experiences dry eye syndrome.
+              It’s also more common in women than men.</p>
+
+            <p><h2>What are the symptoms of dry eye syndrome?</h2>
+              <ul>
+                <li>Feelings of dryness, grittiness or soreness that get worse during the day</li>
+                <li>Red eyes</li>
+                <li>Eyelids that stick together when you wake up</li>
+                <li>Temporarily blurred vision, which usually improves when you blink</li>
+              </ul>
+
+
+                More severe symptoms of dry eye syndrome include extreme sensitivity to light (photophobia),
+                 very red and painful eyes, and deterioration in your vision.
+                If you have any of these severe symptoms, this can be a sign of a serious complication.
+                 Contact your optician, GP or NHS 111 immediately for appropriate advice.</p>
+
+            <p><h2>What help is available?</h2>
+
+              Your optician may give you eye drops to lubricate your eyes or you could need medication to reduce inflammation.
+              If necessary, surgery can prevent tears from draining away too easily.
+              If dry eye is caused by an underlying condition,
+              treating this condition will usually help relieve the symptoms. If necessary, the optician may refer you for further tests.
+            </p>
+
+
           </div>
 
         </div>
@@ -120,12 +153,32 @@
           <div class="col-2">
             <h2>Cartaracts</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
+            <p>Cataracts are very common – the main cause of impaired vision worldwide.
+            In England and Wales, it is estimated that around 2.5 million people aged 65 or older have some degree of visual impairment caused by cataracts.</p>
+
+            <h2>What are the symptoms of cataracts?</h2>
+
+            <ul>
+              <li> Blurred, misty or cloudy vision</li>
+              <li>You may find it more difficult to see in dim or very bright light</li>
+              <li>Bright lights may be dazzling or uncomfortable to look at</li>
+              <li>Colours may look faded or less clear with a yellow or brown tinge</li>
+              <li>You may have double vision</li>
+              <li>You may see a haloes (circles of light) around bright lights, such as car headlights or street lights</li>
+  </ul>
+
+            <p> Cataracts develop over many years and problems may at first be unnoticeable.
+            They  often develop in both eyes, although each eye may be affected differently.
+            Cataracts are not painful and don’t make your eyes red or irritated. You’ll usually have blurred,
+            cloudy or misty vision, or you may have small spots or patches where your vision is less clear.</p>
+
+            <p><h2>What help is available?</h2>If your cataracts are mild, stronger glasses and brighter reading lights may be helpful for some time. However,
+              most cataracts get worse over time (often many years) so it’s likely you will eventually need treatment.
+              The only treatment that is proven to be effective for cataracts is surgery. This will usually be recommended if your loss of vision
+              has a significant effect on your daily activities, such as driving or reading.
+              If it is thought you have cataracts that are affecting your quality of life, you can be referred to an ophthalmologist or an ophthalmic surgeon,
+               who can confirm the diagnosis and plan your treatment.</p>
+        </div>
 
         </div>
       </div>
@@ -141,37 +194,29 @@
           <div class="col-2">
             <h2>Macular Dengeneration</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p><h2>What are the symptoms of age-related macular degeneration?</h2>
+              Macular degeneration isn’t painful. You may not even notice you have the condition until you experience a loss of vision.
+              AMD affects activities requiring detail, such as reading and writing.
+              <br></br>
+              <strong>Dry AMD</strong>
+              <br>
+              <p>The more common of the two conditions, dry AMD affects your ability to see fine detail.
+              You may find it difficult to read, use your computer, watch the television, drive, etc. Some people may not realise the change in vision,
+              as the deterioration is so slow.
+              <br></br>
+              <strong>Wet AMD</strong>
+              <br></br>
+              Wet AMD involves a sudden and sometimes dramatic decline in your central vision, usually in one eye. Typically,
+              wet AMD develops in people who have already had dry AMD. It is very important that anyone who has unusual symptoms,
+              such as straight lines appearing to be wavy or blurring of the central vision, contacts an optometrist as soon as possible.
+            </P>
           </div>
 
         </div>
       </div>
-       <button class="myBtn_multi">Temporary double vision</button>
-       <!-- The Modal -->
-        <div class="modal modal_multi">
-        <!-- Modal content -->
-        <div class="modal-content">
-          <span class="close close_multi">&times;</span>
-          <div class="col-1">
-            <img class="item-img"src="img/item1.jpg" alt="">
-          </div>
-          <div class="col-2">
-            <h2>Temporary Double Vision</h2>
-
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-               Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-               Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-                Excepteur sint occaecat cupidatat non proident,
-               sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          </div>
-
-        </div>
-      </div>
-
+      <br>
+      <strong>Temporary Double Vision</strong>
+      <br>
       Episodes of temporary diplopia happen for many reasons, like if you’ve been drinking too much alcohol,
       or if you’re over-tired. Short-term double vision is usually nothing to worry about,
       but if you experience double vision for longer than 48 hours we’d recommend getting your eyes checked by your optician or GP.
@@ -199,6 +244,7 @@
       <div class="test">
         <img class="cont-img2" src="img/cat.png" alt="">
         <img class="cont-img2" src="img/cat.png" alt="">
+        <img class="cont-img2" src="img/cat.png" alt="">
 
         <p> <h2>Test with the two cats:</h2> If you are looking to a pen in front of the paper, you'll see a  third cat standing behind the pen.
           That third cat has everything on it and remember: two ears, two whiskers and a tail.
@@ -212,13 +258,15 @@
     <div class"content5">
     <div class="content-ops">
     <div class="Content-button">
+      <a href="https://goo.gl/maps/o5p5UfoMidB2">
       <button class="ops-button" name="button">FIND AN OPTICIAN</button>
+      </a>
     </div>
   </div>
 </div>
 
     <!-- content4 -->
-<div class="Content1">
+<div class="content6">
       <div class="img-comp-container">
     <div class="img-comp-img">
       <img src="img/eiffel.jpg" >
@@ -228,6 +276,7 @@
     </div>
       <h3>Use the slider to find out what doucble vision looks like.</h3>
 
+</div>
 </div>
     <!-- end -->
 
