main globe added

--- a/index.html
+++ b/index.html
@@ -257,37 +257,26 @@
     <!-- content5 -->
     <div class"content5">
     <div class="content-ops">
-    <div class="Content-button">
-      <a href="https://goo.gl/maps/o5p5UfoMidB2">
-      <button class="ops-button" name="button">FIND AN OPTICIAN</button>
+      <i class="fa fa-facebook-official" style="font-size:48px;color:blue"></i>
+      <i class="fa fa-youtube-play" style="font-size:48px;color:red"></i>
+      <i class="fa fa-wikipedia-w" style="font-size:48px"></i>
       </a>
     </div>
   </div>
-</div>
-
-    <!-- content4 -->
-<div class="content6">
-      <div class="img-comp-container">
-    <div class="img-comp-img">
-      <img src="img/eiffel.jpg" >
-    </div>
-    <div class="img-comp-img img-comp-overlay">
-      <img src="img/double.jpg" >
-    </div>
-      <h3>Use the slider to find out what doucble vision looks like.</h3>
-
-</div>
-</div>
     <!-- end -->
 
-    <div class="footer">
-      <div class="icons">
-      <a href="#" class="fa fa-facebook"></a>
-      <a href="#" class="fa fa-twitter"></a>
-      <a href="#" class="fa fa-google"></a>
-    </div>
-    </div>
+<!-- main golbe -->
+<div class="content6">
+<div class="main_globe">
+  <h2>My Portfolio</h2>
+  <a href="#">CV</a>
+  <a href="http://shopwest.cf/">Shop West</a>
+  <a href="http://projectgurung.cf/">Double Vision</a>
+  <a href="#">Visit nepal</a>
+</div>
+</div>
 
+<!-- end -->
  <script src="script.js">
 
  </script>
